--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -55,10 +55,10 @@
     <form action="">
         <class="caja contacto>
         <p>
-        <label for="nombre">Nombre:</label>
-        <input type="text" name="nombre"><br>
-        <label for="apellido">Apellido:</label>
-        <input type="text" name="apellido"><br>
+        <label for="nombres">Nombre y Apellido:</label>
+        <input type="text" name="nombres"><br>
+        <label for="asunto">Asunto:</label>
+        <input type="text" name="asunto"><br>
         <label for="email">Email:</label>
         <input type="email" name="email"><br>       
         <label for="newsletter">Desea recibir nuestro newsletter:</label>
