--- a/secciones/compras.html
+++ b/secciones/compras.html
@@ -1,55 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta name="description" content="Elaboración de la pasteleria italiana y compra de los productos">
-    <meta name="keywords" content="pasteleria, italiana, floral, tortas, tartas, muffins, brownie, chocotorta, macarons, chocolate, rogel, icepops, cakepop, artesanal">
-    <title>Compras</title>
-    <link rel="stylesheet" href="../css/estilo.css">
-    <link rel="stylesheet" href="../css/destino.css">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Karma:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">  
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="description" content="Elaboración de la pasteleria italiana y compra de los productos">
+  <meta name="keywords" content="pasteleria, italiana, floral, tortas, tartas, muffins, brownie, chocotorta, macarons, chocolate, rogel, icepops, cakepop, artesanal">
+  <title>Compras</title>
+  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="stylesheet" href="../css/destino.css">
+  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karma:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">  
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light menu_bar">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-    <li class="nav-item dropdown">
-        <li class="nav-item">
-            <a class="nav-link" href="../index.html">Home</a>
-        </li>
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        Productos
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <li><a class="dropdown-item" href="paquetes.html">Paquetes</a></li>
-        <li><a class="dropdown-item" href="tortas.html">Tortas</a></li>
-        <li><a class="dropdown-item" href="video.html">Video</a></li>
-        </ul>
-    </li> 
-<li class="nav-item">
-    <a class="nav-link" href="#">Cómo comprar</a>
-</li>       
-<li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="nosotros.html">Nosotros</a>
-</li>
-</ul>
-<form class="d-flex">
-<input class="form-control me-2" type="search" placeholder="Escribe aquí" aria-label="Search">
-<button class="btn btn-outline-success" type="submit">Buscar</button>
-</form>
-</div> 
-</nav>
 <body class="imagenFondo">
-    <div class="logo">
-    <a href="../index.html"> <img src="../img/pasticceria2.png"></a>
+<div class="logo"><a href="../index.html"> <img src="../img/pasticceria2.png"></a>
+</div>
+<nav class="navbar navbar-light bg-light fixed-top">    <div class="container-fluid">
+  <a class="navbar-brand" href="tortas.html">❤️¡ENVIO GRATIS EN COMPRAS DE $5000 O MÀS!❤️</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div class="offcanvas-header">
+      <p class="offcanvas-title" id="offcanvasNavbarLabel">Menú</p>
+      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
+    <div class="offcanvas-body">
+      <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Productos</a>
+          <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+            <li><a class="dropdown-item" href="paquetes.html">Paquetes</a></li>
+            <li><a class="dropdown-item" href="tortas.html">Tortas</a></li>
+            <li><a class="dropdown-item" href="video.html">Video</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cómo comprar</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="nosotros.html">Nosotros</a>
+          </li>  
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+    </div>
+  </div>
+</nav>
 <h1 class="titulos backgroundBrown">Cómo comprar</h1> 
 <div class="espacios"></div>
 <div class="gridContainer backgroundTexto tipografiaGrid">
