--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -1,65 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta name="description" content="Elaboración de la pasteleria italiana y compra de los productos">
-    <meta name="keywords" content="pasteleria, italiana, floral, tortas, tartas, muffins, brownie, chocotorta, macarons, chocolate, rogel, icepops, cakepop, artesanal">
-    <title>Nosotros</title>
-    <link rel="stylesheet" href="../css/estilo.css">
-    <link rel="stylesheet" href="../css/destino.css">
-    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Karma:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">  
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta name="description" content="Elaboración de la pasteleria italiana y compra de los productos">
+  <meta name="keywords" content="pasteleria, italiana, floral, tortas, tartas, muffins, brownie, chocotorta, macarons, chocolate, rogel, icepops, cakepop, artesanal">
+  <title>Nosotros</title>
+  <link rel="stylesheet" href="../css/estilo.css">
+  <link rel="stylesheet" href="../css/destino.css">
+  <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karma:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">  
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="../bootstrap/js/bootstrap.js">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light menu_bar">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
-            <li class="nav-item">
-                <a class="nav-link" href="../index.html">Home</a>
-            </li>
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Productos
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="paquetes.html">Paquetes</a></li>
-            <li><a class="dropdown-item" href="tortas.html">Tortas</a></li>
-            <li><a class="dropdown-item" href="video.html">Video</a></li>
-            </ul>
-        </li> 
-    <li class="nav-item">
-        <a class="nav-link" href="compras.html">Cómo comprar</a>
-    </li>       
-    <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Nosotros</a>
-    </li>
-    </ul>
-    <form class="d-flex">
-    <input class="form-control me-2" type="search" placeholder="Escribe aquí" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Buscar</button>
-    </form>
-    </div> 
-</nav>
 <body class="imagenFondo">
-    <div class="logo">
-        <a href="../index.html"> <img src="../img/pasticceria2.png"></a>
+<div class="logo">
+    <a href="../index.html"> <img src="../img/pasticceria2.png"></a>
+</div>
+<nav class="navbar navbar-light bg-light fixed-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="tortas.html">❤️¡ENVIO GRATIS EN COMPRAS DE $5000 O MÀS!❤️</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <p class="offcanvas-title" id="offcanvasNavbarLabel">Menú</p>
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Productos</a>
+            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+              <li><a class="dropdown-item" href="paquetes.html">Paquetes</a></li>
+              <li><a class="dropdown-item" href="tortas.html">Tortas</a></li>
+              <li><a class="dropdown-item" href="video.html">Video</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="compras.html">Cómo comprar</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nosotros</a>
+            </li>  
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-    <h1 class="titulos backgroundBrown">Sobre Nosotros</h1>
-    <div class="espacios"></div>
+  </div>
+</nav>
+<h1 class="titulos backgroundBrown">Sobre Nosotros</h1>
+<div class="espacios"></div>
 <p class="backgroundTexto padding ">¡Hola!<br>
 Mi nombre es Beatriz y soy quien elabora todos los productos que ven publicados.<br>
 Pasticceria Arancione nació a partir de mi amor por la Pastelería y lleva ese nombre por mis raíces Italianas.<br>
-Decidí elaborar en su mayoría productos originarios de Italia para rendir homenaje a mi padre ya que siempre me apoyo en mis proyectos.<br>Espero que lo disfruten!
+Decidí elaborar en su mayoría productos originarios de Italia para rendir homenaje a mi padre ya que siempre me apoyo en mis proyectos.<br><mark>Espero que lo disfruten!</mark>
 </p>
-    <div><img class="chef trans" src="../img/chef.jpg" alt="ImagenChef"></div>
+<div><img class="chef trans" src="../img/chef.jpg" alt="ImagenChef"></div>
 <footer>
-    <address class="copyright backgroundBlack"><b>Copyright © 2021 Pasticceria Arancione. Todos los derechos reservados.</b></address>
+  <address class="copyright backgroundBlack"><b>Copyright © 2021 Pasticceria Arancione. Todos los derechos reservados.</b></address>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
